tolk-tester/tests/invalid-declaration/err-1556.tolk
fun nothing(self) {
}

/**
@compilation_should_fail
@stderr `self` can only be the first parameter of a method
 */
